<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">享学吧社区版</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">再按一次退出</string>
    <string name="list_empty">咦，什么都还没有</string>
    <string name="list_refresh_updated">更新于：</string>
    <string name="list_refresh_tip">驾驾驾...</string>
    <string name="list_loading_tip">驾驾驾...</string>
    <string name="no_empty">哟，内容为空</string>
    <string name="no_sdcard">存储卡不可用</string>
    <string name="no_storage_space_for_sdcard">存储卡存储空间不足</string>
    <string name="no_network">主人，网络开小差了</string>
    <string name="request_fail">主人，请求开小差了</string>
    <string name="no_network_retry">点击屏幕，重新请求</string>
    <string name="loading">驾驾驾...</string>
    <string name="review">评论</string>
    <string name="review_add">写评论</string>
    <string name="video_error_retry">点击重试</string>
    <string name="video_error">无法播放</string>
    <string name="video_completion">播放完毕</string>
    <string name="no_more_datas">主人，未发现更多内容</string>
    <string name="course_offline_no_exist">暂无本地课程</string>
    <string name="course_offline_res_not_find">资源文件不存在</string>
    <string name="course_download">离线缓存</string>
    <string name="course_desc">描述</string>
    <string name="course_desc_more">更多描述</string>
    <string name="course_exam_commit">交卷并查看结果</string>
    <string name="course_go_class_before">加入我的课程</string>
    <string name="course_go_class">去上课</string>
    <string name="course_learn_start">开始上课</string>
    <string name="course_learn_going">继续上课</string>
    <string name="course_record_repeat">重看</string>
    <string name="course_record_going">续播</string>
    <string name="course_record_have_video">已看至&#160;&#160;</string>
    <string name="course_record_have_video_finish">已看完&#160;&#160;</string>
    <string name="course_review_knowledge_detail">知识量</string>
    <string name="course_review_funny_detail">趣味性</string>
    <string name="course_review_design_detail">课程设计</string>
    <string name="course_review_empty">小伙伴们，赶紧评论吧</string>
    <string name="course_review_status">进度</string>
    <string name="course_review_et_hint">为了帮助其他用户，说出您对课程的感受吧</string>
    <string name="course_review_et_tips">1、请不要将课程中的作业、考试答案公开
				\n2、请保持字数在10-1000字之间</string>
    <string name="course_review_et_length_limit">字数10-1000字之间</string>
    <string name="course_review_score_knowledge_limit">请给知识量评分</string>
    <string name="course_review_score_funny_limit">请给趣味性评分</string>
    <string name="course_review_score_design_limit">请给课程结构评分</string>
    <string name="course_review_status_limit">请选择进度</string>
    <string name="course_review_knowledge_tips">（内容是否充实、有价值）</string>
    <string name="course_review_funny_tips">（过程是否有趣、吸引人）</string>
    <string name="course_review_design_tips">（设计是否形式丰富、合理）</string>
    <string name="course_review_status_ing">正在学</string>
    <string name="course_review_status_complete">已学完</string>
    <string name="course_review_status_giveup">未能学完</string>
    <string name="course_learn">学过</string>
    <string name="course_focus">关注</string>
    <string name="course_focus_success">关注成功</string>
    <string name="course_focus_fail">关注失败</string>
    <string name="course_add_success">加入课程成功</string>
    <string name="course_add_fail">加入课程失败</string>
    <string name="course_free">免费</string>
    <string name="course_not_my_course">加入课程之后才能评论哦</string>
    <string name="course_review">点评</string>
    <string name="course_review_add">写点评</string>
    <string name="course_homework">作业题</string>
    <string name="course_exam">考试题</string>
    <string name="course_exam_answer_card">答题卡</string>
    <string name="course_homework_start">做作业</string>
    <string name="course_homework_none">暂无作业</string>
    <string name="course_exam_none">暂无考试</string>
    <string name="course_exam_start">去考试</string>
    <string name="course_exam_et_hint">您的答案</string>
    <string name="course_exam_analyze">题目解析</string>
    <string name="course_exam_commit_success">交卷成功</string>
    <string name="course_exam_analyze_score">得分</string>
    <string name="course_exam_analyze_right">答对</string>
    <string name="course_exam_analyze_time">用时</string>
    <string name="course_exam_analyze_time_second">秒</string>
    <string name="course_exam_analyze_time_minute">分钟</string>
    <string name="course_exam_commit_dialog_tips">还有题目未完成，您是否确定交卷？</string>
    <string name="course_exam_exit_dialog_tips">确定退出答题吗？退出后未完成的将不保存您的答案</string>
    <string name="course_me">本地课程</string>
    <string name="course_all">在线课程</string>
    <string name="course_search_no_results">主人，暂未发现满足条件的课程</string>
    <string name="course_search_no_empty">关键字不能为空</string>
    <string name="course_search_hint">请输入课程关键字</string>
    <string name="course_video_buffer_pro">缓冲中：0%</string>
    <string name="course_video_net_speed">下载速度：0.0KB/S</string>
    <string name="course_video_time">00:00</string>
    <string name="course_record_title">播放记录</string>
    <string name="review_more">更多评论</string>
    <string name="cancle">取消</string>
    <string name="find">搜索</string>
    <string name="find_memo">请输入关键字</string>
    <string name="asks">问答</string>
    <string name="asks_reply_now">立即回答</string>
    <string name="asks_reply_couts">已回答</string>
    <string name="asks_add">提问</string>
    <string name="asks_answer">回答</string>
    <string name="asks_commit">提交</string>
    <string name="asks_add_content_memo">您有什么问题，说出来咱们一起解决</string>
    <string name="asks_add_takepic">拍照</string>
    <string name="asks_add_choosePic">从图库选择</string>
    <string name="asks_add_memo">1、提问不限题材，但最好以学习为主，且不要问作业、考试答案。\n2、图片、文字可二选一，字数在10-200字之间，更长的内容用“论坛”功能。</string>
    <string name="asks_answer_me">我来回答</string>
    <string name="asks_question_me">我要提问</string>
    <string name="asks_my_answer">我的回答</string>
    <string name="asks_my_question">我的提问</string>
    <string name="asks_content_null">内容不能为空</string>
    <string name="asks_whos_question">的问题</string>
    <string name="asks_whos_answer">的回答</string>
    <string name="asks_comment">评论</string>
    <string name="asks_comment_memo">请输入您的回答</string>
    <string name="anonymous">匿名：</string>
    <string name="anonymous_memo">（选择”是“，让别人猜猜您是谁）</string>
    <string name="anonymous_name">匿名小金</string>
    <string name="comment">评论</string>
    <string name="forum">论坛</string>
    <string name="forum_add">发帖</string>
    <string name="forum_send">发送</string>
    <string name="posts_title">标题</string>
    <string name="posts_content">请输入您的帖子内容</string>
    <string name="posts_memo">1、帖子内容请不要涉及黄赌毒、暴力等非法内容。\n2、标题字数在5-30字之间，内容字数则不少于100字。</string>
    <string name="posts_like">喜欢</string>
    <string name="posts_type">标签（单选）</string>
    <string name="posts_send">发布</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="asks_more">更多问题</string>
    <string name="asks_common">常见问题</string>
    <string name="asks_all">全部问题</string>
    <string name="dynamic_tips_user_add">加入享学吧</string>
    <string name="dynamic_tips_user_update">修改了个人信息</string>
    <string name="dynamic_tips_asks_add">提了一个问题</string>
    <string name="dynamic_tips_asks_answer">回答了问题</string>
    <string name="dynamic_tips_asks_answer_review">评论了问题</string>
    <string name="dynamic_tips_forum_add">发了一个帖子</string>
    <string name="dynamic_tips_forum_review">评论了帖子</string>
    <string name="dynamic_tips_forum_good">赞了帖子</string>
    <string name="dynamic_tips_course_focus">关注了课程</string>
    <string name="dynamic_tips_course_review">评价了课程</string>
    <string name="dynamic_tips_course_learn">学习了课程</string>
    <string name="dynamic_tips_course_learn_complete">学完了课程</string>
    <string name="dynamic_tips_certificate_got">获得了证书</string>
    <string name="dynamic_tips_system_course_add">加入新课程</string>
    <string name="dynamic_tips_system_app_update">App版本升级</string>
    <string name="dynamic_tips_system_history">发生了一件大事</string>
    <string name="dynamic_me">我的动态</string>
    <string name="dynamic_all">全部动态</string>
    <string name="setting">设置</string>
    <string name="user_index_unlogin">立即登录</string>
    <string name="user_index_cetificate">证书专区</string>
    <string name="user_level_pingmin">平民</string>
    <string name="user_level_xiucai">秀才</string>
    <string name="user_level_juren">举人</string>
    <string name="user_level_jinshi">进士</string>
    <string name="user_level_tanhua">探花</string>
    <string name="user_level_bangyan">榜眼</string>
    <string name="user_level_zhuangyuan">状元</string>
    <string name="user_index_course_user">我的课程/我关注的课程</string>
    <string name="user_index_download">我的下载</string>
    <string name="user_index_asks_me">我的提问/回答</string>
    <string name="user_index_forum_me">我的帖子/参与的帖子</string>
    <string name="user_index_cetificate_me">我的证书</string>
    <string name="login_username_et_hint">邮箱/手机号/用户名</string>
    <string name="login_pswd_et_hint">密码</string>
    <string name="login_pswd_sure_et_hint">密码确认</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="user_name_not_null">用户名为空</string>
    <string name="user_pswd_not_null">密码为空</string>
    <string name="user_pswd_sure_not_null">确认密码为空</string>
    <string name="user_pswd_not_equals">密码输入不一致</string>
    <string name="user_name_limit">用户名2-20个字符</string>
    <string name="user_pswd_limit">密码6-20个字符</string>
    <string name="user_index_course_me">我的课程</string>
    <string name="user_index_course_focus_me">关注课程</string>
    <string name="register">免费注册</string>
    <string name="certificate_rule">规则</string>
    <string name="certificate_course">课程证书</string>
    <string name="certificate_community">社区证书</string>
    <string name="certificate_apply">申请</string>
    <string name="certificate_apply_no">条件未满足</string>

</resources>