<?xml version="1.0" encoding="utf-8"?>

<!-- 数据加载中 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/progress_bar_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/loading_iv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/loading_zj_logo" />

    <TextView
        android:id="@+id/loading_tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/loading"
        android:textColor="@color/tips_color"
        android:textSize="@dimen/list_first_level" />

    <!-- 点击重试 -->

    <LinearLayout
        android:id="@+id/loading_part_ll_no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="center"
        android:onClick="onClickReload"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/no_network_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/request_fail"
            android:textColor="@color/tips_color"
            android:textSize="@dimen/list_first_level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/no_network_retry"
            android:textColor="@color/tips_color"
            android:textSize="@dimen/list_second_level" />
    </LinearLayout>

</LinearLayout>