<?xml version="1.0" encoding="utf-8"?>
<com.zj.support.widget.swipeback.SwipeBackRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    swipe:onSwipeFinish="onSwipeFinish" >

    <include
        android:id="@+id/user_register_ll_titlebar"
        layout="@layout/titlebar_cancel" />

    <LinearLayout
        android:id="@+id/user_register_ll_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_register_ll_titlebar"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user_register_et_username"
            style="@style/user_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:drawableLeft="@drawable/login_et_icon_user"
            android:hint="@string/login_username_et_hint" />

        <EditText
            android:id="@+id/user_register_et_pswd"
            style="@style/user_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:drawableLeft="@drawable/login_et_icon_lock"
            android:hint="@string/login_pswd_et_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/user_register_et_pswd_sure"
            style="@style/user_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:drawableLeft="@drawable/login_et_icon_lock"
            android:hint="@string/login_pswd_sure_et_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/user_register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/common_btn_selector"
            android:clickable="true"
            android:onClick="onRegisterClick"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/list_first_level" />
    </LinearLayout>

    <include
        android:id="@+id/user_register_ll_loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/progress"
        android:visibility="gone" />

</com.zj.support.widget.swipeback.SwipeBackRelativeLayout>