<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/asks_choice_bg"
        android:orientation="vertical"
        android:padding="@dimen/margin_10" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/asks_btn_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onBtnTakePhotoClick"
            android:padding="@dimen/margin_5"
            android:text="@string/asks_add_takepic"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/asks_btn_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onBtnLocalImageClick"
            android:padding="@dimen/margin_5"
            android:text="@string/asks_add_choosePic"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/asks_btn_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onBtnCancleClick"
            android:padding="@dimen/margin_5"
            android:text="@string/cancle"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>